@@ -1,3 +1,8 @@
+2008-02-28 Raul Mateos  <raulofpandora@gmail.com>
+
+	* operation/agentes/estado_monitores.php: Improved usability adding titles
+	in images.
+
 2008-02-26 Sancho Lerena <slerena@gmail.com>
 
 	* pandoradb_data.sql, pandoradbdata_12_to_13.sql: Updated SQL for network 
